--- a/mobilenet_v3.ipynb
+++ b/mobilenet_v3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Build MetaData File - Attributes and Image Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import os\n",
+    "from os import walk\n",
+    "from openpyxl import Workbook\n",
+    "\n",
+    "    \n",
+    "# Define directory root to be scanned for images\n",
+    "#dir_path = r\"C:\\Users\\danie\\Documents\\USDMSAAI\\AAI501\\AAI501 Final Team Project Collateral\\BreaKHis_v1\"\n",
+    "dir_path = 'BreaKHis_v1'\n",
+    "# Pattern for splitting\n",
+    "# pattern = r\"^([A-Z]+)_([A-Z]+)_(\\w+)-(\\d+)-(\\d+)-(\\d+)-\\d+\\.png$\"\n",
+    "# pattern = r\"[_-]\"\n",
+    "pattern = r\"([A-Z]+)_([A-Z]+)_([A-Z]+)-([\\d]+)-([\\w]+)-([\\d]+)-([\\d]+)\\.png\"\n",
+    "cnt = 0    # Count of number of records added to spreadsheet\n",
+    "\n",
+    "# Create an Excel workbook and sheet\n",
+    "workbook = Workbook()\n",
+    "sheet = workbook.active\n",
+    "# Store header row\n",
+    "row = [\"Image Name\", \"Image Path\", \"Magnification\", \"Malignant\", \"A\", \"F\", \"PT\", \"TA\", \"DC\", \"LC\", \"MC\", \"PC\"]\n",
+    "sheet.append(row)\n",
+    "\n",
+    "res = []     # list to store file names\n",
+    "# get all files in directory and sub-directory \n",
+    "for (dir_path, dir_names, file_names) in walk(dir_path):\n",
+    "    for file in file_names:\n",
+    "        res.append((file, os.path.join(dir_path, file)))\n",
+    "\n",
+    "for filename in res:        # Loop through file list\n",
+    "# Check whether file name matches pattern. If match, then parse into variables\n",
+    "    validfile = re.match(pattern, filename[0])\n",
+    "# If valid filename parse\n",
+    "    if validfile:\n",
+    "        clas = validfile.group(2)    # Malignant or benign\n",
+    "        tumor = validfile.group(3)   # What type of tumor\n",
+    "        mag = validfile.group(6)     # Magnification\n",
+    "    \n",
+    "    # Set malignant flag if malignant\n",
+    "        mal = 0     #  Malignant\n",
+    "        if clas == \"M\":\n",
+    "            mal = 1\n",
+    "\n",
+    "# Initialize tumor types to 0, then set current row tumor type to 1\n",
+    "        a = f = pt = ta = dc = lc = mc = pc = 0\n",
+    "        match tumor:\n",
+    "            case \"A\":\n",
+    "                a = 1\n",
+    "            case \"F\":\n",
+    "                f = 1\n",
+    "            case \"PT\":\n",
+    "                pt = 1\n",
+    "            case \"TA\":\n",
+    "                ta = 1\n",
+    "            case \"DC\":\n",
+    "                dc = 1\n",
+    "            case \"LC\":\n",
+    "                lc = 1\n",
+    "            case \"MC\":\n",
+    "                mc = 1\n",
+    "            case \"PC\":\n",
+    "                pc = 1\n",
+    "       \n",
+    "# Create row and append to workbook    \n",
+    "        row = [filename[0], filename[1], mag, mal, a, f, pt, ta, dc, lc, mc, pc]\n",
+    "        sheet.append(row)\n",
+    "        print(\"Row added\", row)\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        print(\"File not processed - filename not a valid pattern:\", filename)\n",
+    "# End of for loop\n",
+    "\n",
+    "# Save the Excel file\n",
+    "workbook.save(\"Metadata dataframe.xlsx\")\n",
+    "print(\"Excel file created successfully with\", cnt, \"records\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Build Model for Fine-Tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +191,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {
       "image/png": {
        "height": 200,
@@ -123,35 +213,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 10 calls to <function Model.make_predict_function.<locals>.predict_function at 0x158668310> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
       "1/1 [==============================] - 2s 2s/step\n",
+      "Output shape:  (1, 1000)\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
       "Output shape:  (1, 1000)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[('n01774750', 'tarantula', 0.16532774),\n",
-       "  ('n03980874', 'poncho', 0.05259283),\n",
-       "  ('n02346627', 'porcupine', 0.022364149),\n",
-       "  ('n01775062', 'wolf_spider', 0.01801954),\n",
-       "  ('n12985857', 'coral_fungus', 0.017100263)]]"
+       "[[('n02099601', 'golden_retriever', 0.31974143),\n",
+       "  ('n02113712', 'miniature_poodle', 0.14111415),\n",
+       "  ('n02113799', 'standard_poodle', 0.107341275),\n",
+       "  ('n02113624', 'toy_poodle', 0.08585333),\n",
+       "  ('n02093647', 'Bedlington_terrier', 0.07808183)]]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "preprocessed_image = image_preprocessing('SOB_M_DC-14-10926-100-002.png')\n",
+    "predictions = mobile_v3.predict(preprocessed_image)\n",
+    "print(\"Output shape: \", predictions.shape)\n",
+    "results = imagenet_utils.decode_predictions(predictions)\n",
+    "results\n",
+    "\n",
+    "preprocessed_image = image_preprocessing('dog1.png')\n",
     "predictions = mobile_v3.predict(preprocessed_image)\n",
     "print(\"Output shape: \", predictions.shape)\n",
     "results = imagenet_utils.decode_predictions(predictions)\n",
@@ -169,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,25 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:6 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x159a90b80> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "1/1 [==============================] - 1s 678ms/step\n",
-      "predict_single_image took: 0.7603330612182617 sec\n"
+      "1/1 [==============================] - 1s 964ms/step\n",
+      "predict_single_image took: 1.0214989185333252 sec\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[[[0.42581642, 0.57418364]]]], dtype=float32)"
+       "array([[[[0.59981984, 0.4001801 ]]]], dtype=float32)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
