--- a/Model_Draft_2.ipynb
+++ b/Model_Draft_2.ipynb
@@ -34,20 +34,7 @@
     "import random\n",
     "from time import time\n",
     "import matplotlib.pyplot as plt\n",
-    "#import pillow as pil\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_PATH = 'SampleData'\n",
-    "#NUM_LAYERS_TO_REMOVE = 5\n",
-    "#NUM_LAYERS_TO_TRAIN = 20\n",
-    "LAYERS_TO_UNFREEZE = 120"
    ]
   },
   {
@@ -55,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create image pre-processing function"
+    "## Download preprocessing method and pretrained model"
    ]
   },
   {
@@ -64,72 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to preprocess the image with Keras\n",
     "preprocess_input = tf.keras.applications.mobilenet_v3.preprocess_input\n",
-    "#def image_preprocessing(file):\n",
-    "#    img = image.load_img(file, target_size=(224, 224))\n",
-    "#    img_array = image.img_to_array(img)\n",
-    "#    img_array_expanded_dims = np.expand_dims(img_array, axis=0)\n",
-    "#    return tf.keras.applications.mobilenet_v3.preprocess_input(img_array_expanded_dims)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load the metadata file.  Create a ground truth column."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the metadata file\n",
-    "#metadata = pd.read_excel('metadata_modified.xlsx')\n",
-    "#image_path = metadata['Image Path']\n",
-    "# Create the ground truth values and put it into a new 'g_truth' column\n",
-    "#g_truth = metadata['Malignant'] + metadata['A']*2 + metadata['F']*4 + metadata['PT']*8 + metadata['TA']*16 + metadata['DC']*32 + metadata['LC']*64 + metadata['MC']*128 + metadata['PC']*256\n",
-    "#metadata['g_truth'] = g_truth"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Display a test image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:`input_shape` is undefined or non-square, or `rows` is not 224. Weights for input shape (224, 224) will be loaded as the default.\n"
-     ]
-    }
-   ],
-   "source": [
-    "mobile_v3 = tf.keras.applications.MobileNetV3Large()\n",
-    "#preprocessed_image = image_preprocessing(image_path[7117])\n",
-    "#predictions = mobile_v3.predict(preprocessed_image)\n",
-    "#print(\"Output shape: \", predictions.shape)\n",
-    "#results = imagenet_utils.decode_predictions(predictions)\n",
-    "#results"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Remove the specifiied number of layers.\n",
-    "Freeze the specified number of layers."
+    "mobile_v3 = tf.keras.applications.MobileNetV3Large()"
    ]
   },
   {
@@ -172,24 +95,16 @@
     "  shuffle=True\n",
     ")\n",
     "\n",
-    "# Get the labels from the train dataset\n",
-    "\n",
-    "\n",
-    "\n",
     "holdout_batches = len(holdout_dataset)\n",
     "val_size = int(holdout_batches*0.6)\n",
     "test_size = int(holdout_batches*0.4)\n",
-    "\n",
-    "#classes = holdout_dataset.class_names\n",
     "\n",
     "val_dataset = holdout_dataset.take(val_size)\n",
     "test_dataset = holdout_dataset.skip(val_size).take(test_size)\n",
     "\n",
     "print(\"Train dataset length: \", len(train_dataset))\n",
     "print(\"Val dataset length: \", len(val_dataset))\n",
-    "print(\"Test dataset length: \", len(test_dataset))\n",
-    "\n",
-    "#print(\"Holdout dataset class names: \", holdout_dataset.class_names)\n"
+    "print(\"Test dataset length: \", len(test_dataset))\n"
    ]
   },
   {
@@ -241,7 +156,7 @@
    "source": [
     "IMG_SIZE=(224,224)\n",
     "IMG_SHAPE = IMG_SIZE + (3,)\n",
-    "def new_model (image_shape=IMG_SIZE, fine_tune_at=120):\n",
+    "def new_model (image_shape=IMG_SIZE, fine_tune_at=150):\n",
     "    input_shape = image_shape + (3,)\n",
     "    base_model = tf.keras.applications.MobileNetV3Large(input_shape=IMG_SHAPE,\n",
     "                                                        include_top=False, # important\n",
@@ -254,13 +169,6 @@
     "    for layer in base_model.layers[:fine_tune_at]:\n",
     "        layer.trainable = False\n",
     "\n",
-    "    # # unfreeze some layers\n",
-    "    # for layer in base_model.layers[-LAYERS_TO_UNFREEZE:]:\n",
-    "    #     #print(\"Unfreeze layer: \", layer.name)\n",
-    "    #     layer.trainable = True\n",
-    "\n",
-    "    #print(base_model.summary())\n",
-    "\n",
     "    # create input layer\n",
     "    inputs = tf.keras.Input(shape=input_shape)\n",
     "    # pre-process inputs\n",
@@ -269,7 +177,8 @@
     "    x = data_augmenter()(x)\n",
     "    # set training to False to avoid tracking statistics in batch norm layer\n",
     "    x = base_model(x, training=False)\n",
-    "    # add flatten layer\n",
+    "\n",
+    "    # add custom layers\n",
     "    x = tf.keras.layers.Flatten()(x)\n",
     "    x = tf.keras.layers.Dropout(0.5)(x)\n",
     "    x = tf.keras.layers.Dense(64, activation='relu')(x)\n",
@@ -283,59 +192,6 @@
     "    model = tf.keras.Model(inputs,outputs)\n",
     "    return model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the learning rate scheduler\n",
-    "from tensorflow.keras import backend as K\n",
-    "from tensorflow.keras.optimizers.schedules import ExponentialDecay\n",
-    "import tensorflow_addons as tfa\n",
-    "\n",
-    "def lr_scheduler(lr_transfer, lr_new, epoch_decay, layer_decay, model):\n",
-    "    optimizers_and_layers = []\n",
-    "\n",
-    "    num_transfer_layers = 0\n",
-    "    num_new_layers = 0\n",
-    "\n",
-    "    # Get count of all layers\n",
-    "    for layer in model.layers:\n",
-    "        if layer.name.startswith('Mobilenet'):\n",
-    "            for mobilenet_layer in layer.layers:\n",
-    "                num_transfer_layers += 1\n",
-    "        else:\n",
-    "            num_new_layers += 1\n",
-    "\n",
-    "    print(\"Number of transfer layers: \", num_transfer_layers)\n",
-    "    print(\"Number of new layers: \", num_new_layers)\n",
-    "\n",
-    "    # Get all the trainable layers\n",
-    "    for layer in model.layers:\n",
-    "        if layer.name.startswith('Mobilenet'):\n",
-    "            for mobilenet_layer in layer.layers:\n",
-    "                if mobilenet_layer.trainable:\n",
-    "                    schedule = ExponentialDecay(initial_learning_rate=lr_transfer, decay_steps=1, decay_rate=epoch_decay)\n",
-    "                    optimizers_and_layers.append((tf.keras.optimizers.legacy.Adam(learning_rate=schedule), mobilenet_layer))\n",
-    "                    \n",
-    "        elif layer.trainable:\n",
-    "            schedule = ExponentialDecay(initial_learning_rate=lr_new, decay_steps=1, decay_rate=epoch_decay)\n",
-    "            optimizers_and_layers.append((tf.keras.optimizers.legacy.Adam(learning_rate=schedule), layer))\n",
-    "\n",
-    "    # Create the learning rate schedule\n",
-    "    optimizer = tfa.optimizers.MultiOptimizer(optimizers_and_layers)\n",
-    "\n",
-    "    return optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -493,21 +349,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Load a saved model\n",
-    "#model = tf.keras.models.load_model('models/model_29.keras')\n",
+    "def plot_accuracy(train_accuracy, val_accuracy):\n",
+    "    # Plot the training and validation accuracy per epoch\n",
+    "    \n",
+    "    plt.plot(train_accuracy, label='train_accuracy')\n",
+    "    plt.plot(val_accuracy, label='val_accuracy')\n",
+    "    plt.legend(loc='lower right')\n",
+    "    plt.title('Training and Validation Accuracy')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('accuracy')\n",
+    "    plt.show()\n",
     "\n",
-    "\n",
-    "accuracy = history.history['accuracy']\n",
-    "val_accuracy = history.history['val_accuracy']\n",
-    "\n",
-    "# Plot the training and validation accuracy per epoch\n",
-    "plt.plot(accuracy, label='train_accuracy')\n",
-    "plt.plot(val_accuracy, label='val_accuracy')\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.title('Training and Validation Accuracy')\n",
-    "plt.xlabel('epoch')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.show()\n",
+    "plot_accuracy(history.history['accuracy'], history.history['val_accuracy'])\n",
     "\n"
    ]
   },
@@ -673,42 +526,6 @@
     "cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "sns.heatmap(cm, annot=True, fmt='.2f', cmap='Blues', xticklabels=target, yticklabels=target)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
-      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'SGD' object has no attribute 'build'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[81], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model2 \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mkeras\u001b[39m.\u001b[39;49mmodels\u001b[39m.\u001b[39;49mload_model(\u001b[39m'\u001b[39;49m\u001b[39mmodels/model_41.keras\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/saving/saving_api.py:230\u001b[0m, in \u001b[0;36mload_model\u001b[0;34m(filepath, custom_objects, compile, safe_mode, **kwargs)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[39mif\u001b[39;00m kwargs:\n\u001b[1;32m    226\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    227\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe following argument(s) are not supported \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    228\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mwith the native Keras format: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlist\u001b[39m(kwargs\u001b[39m.\u001b[39mkeys())\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    229\u001b[0m         )\n\u001b[0;32m--> 230\u001b[0m     \u001b[39mreturn\u001b[39;00m saving_lib\u001b[39m.\u001b[39;49mload_model(\n\u001b[1;32m    231\u001b[0m         filepath,\n\u001b[1;32m    232\u001b[0m         custom_objects\u001b[39m=\u001b[39;49mcustom_objects,\n\u001b[1;32m    233\u001b[0m         \u001b[39mcompile\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mcompile\u001b[39;49m,\n\u001b[1;32m    234\u001b[0m         safe_mode\u001b[39m=\u001b[39;49msafe_mode,\n\u001b[1;32m    235\u001b[0m     )\n\u001b[1;32m    237\u001b[0m \u001b[39m# Legacy case.\u001b[39;00m\n\u001b[1;32m    238\u001b[0m \u001b[39mreturn\u001b[39;00m legacy_sm_saving_lib\u001b[39m.\u001b[39mload_model(\n\u001b[1;32m    239\u001b[0m     filepath, custom_objects\u001b[39m=\u001b[39mcustom_objects, \u001b[39mcompile\u001b[39m\u001b[39m=\u001b[39m\u001b[39mcompile\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[1;32m    240\u001b[0m )\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:275\u001b[0m, in \u001b[0;36mload_model\u001b[0;34m(filepath, custom_objects, compile, safe_mode)\u001b[0m\n\u001b[1;32m    272\u001b[0m             asset_store\u001b[39m.\u001b[39mclose()\n\u001b[1;32m    274\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m--> 275\u001b[0m     \u001b[39mraise\u001b[39;00m e\n\u001b[1;32m    276\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    277\u001b[0m     \u001b[39mreturn\u001b[39;00m model\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:240\u001b[0m, in \u001b[0;36mload_model\u001b[0;34m(filepath, custom_objects, compile, safe_mode)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[39m# Construct the model from the configuration file in the archive.\u001b[39;00m\n\u001b[1;32m    239\u001b[0m \u001b[39mwith\u001b[39;00m ObjectSharingScope():\n\u001b[0;32m--> 240\u001b[0m     model \u001b[39m=\u001b[39m deserialize_keras_object(\n\u001b[1;32m    241\u001b[0m         config_dict, custom_objects, safe_mode\u001b[39m=\u001b[39;49msafe_mode\n\u001b[1;32m    242\u001b[0m     )\n\u001b[1;32m    244\u001b[0m all_filenames \u001b[39m=\u001b[39m zf\u001b[39m.\u001b[39mnamelist()\n\u001b[1;32m    245\u001b[0m \u001b[39mif\u001b[39;00m _VARS_FNAME \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.h5\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m all_filenames:\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/saving/serialization_lib.py:710\u001b[0m, in \u001b[0;36mdeserialize_keras_object\u001b[0;34m(config, custom_objects, safe_mode, **kwargs)\u001b[0m\n\u001b[1;32m    708\u001b[0m     compile_config \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mcompile_config\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m    709\u001b[0m     \u001b[39mif\u001b[39;00m compile_config:\n\u001b[0;32m--> 710\u001b[0m         instance\u001b[39m.\u001b[39;49mcompile_from_config(compile_config)\n\u001b[1;32m    712\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mshared_object_id\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m config:\n\u001b[1;32m    713\u001b[0m     record_object_after_deserialization(\n\u001b[1;32m    714\u001b[0m         instance, config[\u001b[39m\"\u001b[39m\u001b[39mshared_object_id\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    715\u001b[0m     )\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/engine/training.py:3582\u001b[0m, in \u001b[0;36mModel.compile_from_config\u001b[0;34m(self, config)\u001b[0m\n\u001b[1;32m   3579\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompile(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mconfig)\n\u001b[1;32m   3580\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39moptimizer\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuilt:\n\u001b[1;32m   3581\u001b[0m     \u001b[39m# Create optimizer variables.\u001b[39;00m\n\u001b[0;32m-> 3582\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptimizer\u001b[39m.\u001b[39;49mbuild(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrainable_variables)\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/optimizers/legacy/optimizer_v2.py:997\u001b[0m, in \u001b[0;36mOptimizerV2.__getattribute__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    995\u001b[0m \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_hyper:\n\u001b[1;32m    996\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_hyper(name)\n\u001b[0;32m--> 997\u001b[0m \u001b[39mraise\u001b[39;00m e\n",
-      "File \u001b[0;32m~/Documents/CS/Masters/AAI501/Group Project/aai501-su23-group-1/env9/lib/python3.10/site-packages/keras/src/optimizers/legacy/optimizer_v2.py:987\u001b[0m, in \u001b[0;36mOptimizerV2.__getattribute__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    985\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Overridden to support hyperparameter access.\"\"\"\u001b[39;00m\n\u001b[1;32m    986\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 987\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(name)\n\u001b[1;32m    988\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    989\u001b[0m     \u001b[39m# Needed to avoid infinite recursion with __setattr__.\u001b[39;00m\n\u001b[1;32m    990\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m_hyper\u001b[39m\u001b[39m\"\u001b[39m:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SGD' object has no attribute 'build'"
-     ]
-    }
-   ],
-   "source": [
-    "model2 = tf.keras.models.load_model('models/model_41.keras')"
    ]
   },
   {
