Switching from scipy.interp to np.interp due to depracation

--- a/Model_Draft_2.ipynb
+++ b/Model_Draft_2.ipynb
@@ -530,18 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/v3/6g8j12qj0yd6zlbh6nr578p80000gn/T/ipykernel_86595/2470230396.py:25: DeprecationWarning: scipy.interp is deprecated and will be removed in SciPy 2.0.0, use numpy.interp instead\n",
-      "  mean_tpr += interp(all_fpr, fpr[i], tpr[i])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lb = LabelBinarizer()\n",
     "lb.fit(ytest)\n",
@@ -567,7 +558,7 @@
     "# Then interpolate all ROC curves at this points\n",
     "mean_tpr = np.zeros_like(all_fpr)\n",
     "for i in range(len(CLASSES)):\n",
-    "    mean_tpr += interp(all_fpr, fpr[i], tpr[i])\n",
+    "    mean_tpr += np.interp(all_fpr, fpr[i], tpr[i])\n",
     "\n",
     "# Finally average it and compute AUC\n",
     "mean_tpr /= len(CLASSES)\n",
